# Detector_server_client

./: LICENSE  README.md
Docker/Docker_client/: Dockerfile
Docker/Docker_server/: Dockerfile  readme.md
detector_client/: CMakeLists.txt  detector_client.cpp  detector_client.h
detector_server/: CMakeLists.txt  box.cpp  box.h  detector_server.cpp  detector_server.h  utilities.cpp  utilities.h
